--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "discord.js": "^11.3.0",
     "enmap": "^0.4.2",
-    "enmap-level": "^1.0.0"
+    "enmap-level": "^1.0.0",
+    "moment": "^2.20.1"
   }
 }
