--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^11.3.0",
     "enmap": "^0.4.2",
     "enmap-level": "^1.0.0",
-    "humanize-duration": "^3.12.1"
+    "humanize-duration": "^3.12.1",
+    "text-table": "^0.2.0"
   }
 }
